--- a/tak_engine/CMakeLists.txt
+++ b/tak_engine/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (tak_engine "tak_engine.cpp" "tak_engine.h"   "tak/tak_board.h" "tak/move.h" "tak/tak_board.cpp" "params.h" "tak/move_iterator.h"  "search/search.h" "tak/piece.h" "tak/move_list.h" "tak/move_list.cpp" "tak/enums.h" "tak/magic.h" "tak/magic.cpp" "util/random.h")
+add_executable (tak_engine "tak_engine.cpp" "tak_engine.h"   "tak/tak_board.h" "tak/move.h" "tak/tak_board.cpp" "params.h" "tak/move_iterator.h"  "search/search.h" "tak/piece.h" "tak/move_list.h" "tak/move_list.cpp" "tak/enums.h" "tak/magic.h" "tak/magic.cpp" "util/random.h" "tak/bitboard.h")
 
 add_compile_options(-O2 -fconstexpr-steps=1000000000 -fconstexpr-depth=10000)
 
